# cfg-molecular-diffusion

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  runs.md
e3_diffusion_for_molecules/: .gitignore  eval_sample.py  main_qm9.py  pyproject.toml  sample_cfg.py  train_test.py
e3_diffusion_for_molecules/equivariant_diffusion/: en_diffusion.py
e3_diffusion_for_molecules/qm9/: sampling.py  visualizer.py
e3_diffusion_for_molecules/qm9/data/: args.py
e3_diffusion_for_molecules/qm9/data/prepare/: process.py  qm9.py
oracle/: evaluate_oracle.py  oracle_model.py  train_oracle.py
scripts/: train_cfg.sh  train_cfg_colab.ipynb  upload_dataset_wandb.py
