[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EN_diffusion"
version = "1.0.0"
description = "Description of my package"
authors = [
    {name = "Author Name", email = "author@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.11.1",
    "matplotlib>=1.5.1",
    "imageio",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "wandb"
]
